Update tests to address SM deprecation